# fastdds-pr-minimal-examples

./: .gitmodules  CMakeLists.txt  README.md
src/nested-field-type-registration-bug/: CMakeLists.txt
src/nested-field-type-registration-bug/src/: ContrivedSubscriber.cpp  HelloWorldPublisher.cpp  HelloWorldPublisher.h  HelloWorldSubscriber.cpp  HelloWorldSubscriber.h
src/nested-sequences-bug/: CMakeLists.txt
src/nested-sequences-bug/src/: array_of_nested_structs.cpp  could_not_delete.cpp  empty_sequence_of_nested_structs.cpp  sequence_of_nested_structs.cpp
